--- a/main-design.css
+++ b/main-design.css
@@ -253,7 +253,7 @@ li a:hover {
         left: 50%;
         transform: translate(-50%, -50%);
         padding: 20px;
-        background; rgb(0, 0, 0);
+        background: rgb(0, 0, 0);
         box-sizing: border-box;
         /* box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5); */
         box-shadow: 0px 0px 20px gray;
