--- a/main-design.css
+++ b/main-design.css
@@ -72,7 +72,7 @@ div.loadingWindow{
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
-    background: rgb(31, 31, 32);
+    background: rgb(0, 0, 0);
     box-sizing: border-box;
     /* box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5); */
     box-shadow: 0px 0px 20px gray;
@@ -98,13 +98,27 @@ img.SimpleXTeam-Logo{
 }
 
 .ProgressBar{
-    background: rgba(37, 36, 36, 0.938);
-    border-color: black;
+    background: rgba(212, 203, 203, 0.938);
+    border-color: rgb(34, 32, 32);
     border-style: solid;
     box-sizing: border-box;
     width: 100%;
+    height: 25px;
+    color: aqua;
 }
 
+progress::-webkit-progress-bar {  
+	background-color: grey;
+}  
+progress::-webkit-progress-value {  
+    background-color:aqua;
+    border-radius: 3px;
+    box-shadow: 0 2px 3px rgba(0, 0, 0, .5) inset;
+}  
+
+progress::-moz-progress-bar {  
+	background-color: red;
+}  
 .deviceBody{
     background: url('logo.jpg') no-repeat;
     background-color: black;
@@ -174,7 +188,6 @@ div.device-infobox{
     background-color: #333;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 
 li {
     float: left;
