--- a/main-design.css
+++ b/main-design.css
@@ -75,7 +75,7 @@ div.loadingWindow{
     background: rgb(0, 0, 0);
     box-sizing: border-box;
     /* box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5); */
-    box-shadow: 0px 0px 20px gray;
+    box-shadow: 0px 0px 20px rgb(17, 218, 233);
     border-radius: 10px
 }
 
@@ -108,7 +108,7 @@ img.SimpleXTeam-Logo{
 }
 
 progress::-webkit-progress-bar {  
-	background-color: grey;
+	background-color: rgb(0, 0, 0);
 }  
 progress::-webkit-progress-value {  
     background-color:aqua;
@@ -117,8 +117,17 @@ progress::-webkit-progress-value {
 }  
 
 progress::-moz-progress-bar {  
-	background-color: red;
-}  
+	background-color: aqua;
+}
+
+.loadWebsiteServer{
+    color: aqua;
+    width: 100%;
+    font-size: 35px;
+    background-color: rgb(53, 51, 51);
+    display: none;
+}
+
 .deviceBody{
     background: url('logo.jpg') no-repeat;
     background-color: black;
@@ -269,7 +278,7 @@ li a:hover {
         background: rgb(0, 0, 0);
         box-sizing: border-box;
         /* box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5); */
-        box-shadow: 0px 0px 20px gray;
+        box-shadow: 0px 0px 20px aqua;
         border-radius: 10px;
         zoom: 3;
     }
@@ -292,9 +301,19 @@ li a:hover {
         width: 100%;
     }
 
+    .loadWebsiteServer{
+        color: aqua;
+        width: 100%;
+        font-size: 60px;
+        background-color: rgb(53, 51, 51);
+        display: none;
+    }
+
     progress::-webkit-progress-value {
-        background: blue;
+        background: aqua;
         float: left;
+        border-radius: 3px;
+        box-shadow: 0 2px 3px rgba(0, 0, 0, .5) inset;
     }
 
     .mainBody{
